--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
   redis:
     image: 'redis:latest'
   api:
+    container_name: api
     build:
       dockerfile: Dockerfile.dev
       context: ./server
@@ -28,6 +29,7 @@ services:
       - PGPASSWORD=postgres_password
       - PGPORT=5432
   client:
+    container_name: client
     build:
       dockerfile: Dockerfile.dev
       context: ./client
