--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,23 @@ services:
   - docker
 
 before_install:
-  - docker build -t loki194/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run loki194/react-test npm test -- --coverage
+  - docker run stephengrider/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t loki194/multi-client ./client
-  - docker build -t loki194/multi-nginx ./nginx
-  - docker build -t loki194/multi-server ./server
-  - docker build -t loki194/multi-worker ./worker
-
-  # take these images and push to the docker-hub
-  
+  - docker build -t stephengrider/multi-client ./client
+  - docker build -t stephengrider/multi-nginx ./nginx
+  - docker build -t stephengrider/multi-server ./server
+  - docker build -t stephengrider/multi-worker ./worker
+  # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push loki194/multi-client
-  - docker push loki194/multi-nginx
-  - docker push loki194/multi-server
-  - docker push loki194/multi-worker
+  # Take those images and push them to docker hub
+  - docker push stephengrider/multi-client
+  - docker push stephengrider/multi-nginx
+  - docker push stephengrider/multi-server
+  - docker push stephengrider/multi-worker
 
 deploy:
   provider: elasticbeanstalk
@@ -30,7 +29,7 @@ deploy:
   bucket_name: elasticbeanstalk-us-east-2-327326504583
   bucket_path: docker-multi
   on:
-    branch: master
+    branch: feature
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
     secure: $AWS_SECRET_KEY
