--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,11 @@
-# Build phase
 FROM node:alpine as builder
-WORKDIR /usr/app
-COPY package.json .
+WORKDIR '/app'
+COPY ./package.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# /usr/app/build <---- all the stuff we care about for production 
-
 FROM nginx
 EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /usr/app/build /usr/share/nginx/html
+COPY --from=builder /app/build /usr/share/nginx/html
