--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,23 @@
 version: '3'
 services:
-  nginx:
-    restart: always
-    image: 'nginx'
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./nginx
-    ports:
-      - '3003:80'
   postgres:
     image: 'postgres:latest'
   redis:
     image: 'redis:latest'
+  nginx:
+    restart: always
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports:
+      - '3050:80'
   api:
-    container_name: api
     build:
       dockerfile: Dockerfile.dev
       context: ./server
     volumes:
-      - /usr/app/node_modules
-      - ./server:/usr/app
+      - /app/node_modules
+      - ./server:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -29,20 +27,19 @@ services:
       - PGPASSWORD=postgres_password
       - PGPORT=5432
   client:
-    container_name: client
     build:
       dockerfile: Dockerfile.dev
       context: ./client
     volumes:
-      - /usr/app/node_modules
-      - ./client:/usr/app
+      - /app/node_modules
+      - ./client:/app
   worker:
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     build:
       dockerfile: Dockerfile.dev
       context: ./worker
     volumes:
-      - /usr/app/node_modules
-      - ./worker:/usr/app
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - /app/node_modules
+      - ./worker:/app
