--- a/worker/package.json
+++ b/worker/package.json
@@ -1,17 +1,10 @@
 {
-  "name": "worker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "dependencies": {
+    "nodemon": "1.18.3",
+    "redis": "2.8.0"
+  },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "lokendra rawat",
-  "license": "ISC",
-  "dependencies": {
-    "nodemon": "^1.18.9",
-    "redis": "^2.8.0"
+    "dev": "nodemon"
   }
 }
