--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ deploy:
   bucket_name: elasticbeanstalk-us-east-2-327326504583
   bucket_path: docker-multi
   on:
-    branch: feature
+    branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
     secure: $AWS_SECRET_KEY
